--- a/.env
+++ b/.env
@@ -2,18 +2,18 @@ APP_NAME=Unishop
 APP_ENV=local
 APP_KEY=base64:p0tHJGOfu0tCEYRCn8eHBG2v91lZBtvpNV+f2kCGeGQ=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://unishop.hosseinesteki.ir
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=78.159.108.119
 DB_PORT=3306
-DB_DATABASE=unishop
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=tekiir_unishop
+DB_USERNAME=tekiir_admin
+DB_PASSWORD=nK2_rE8_gF6-xL2_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
