--- a/.env
+++ b/.env
@@ -8,12 +8,18 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#DB_CONNECTION=mysql
+#DB_HOST=78.159.108.119
+#DB_PORT=3306
+#DB_DATABASE=tekiir_unishop
+#DB_USERNAME=tekiir_admin
+#DB_PASSWORD=dea]@N3J}hKS
 DB_CONNECTION=mysql
-DB_HOST=78.159.108.119
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=tekiir_unishop
-DB_USERNAME=tekiir_admin
-DB_PASSWORD=nK2_rE8_gF6-xL2_
+DB_DATABASE=unishop
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
